[gd_scene load_steps=7 format=3 uid="uid://biqsjve7g1565"]

[ext_resource type="Script" path="res://src/Card/card.gd" id="1_8872n"]
[ext_resource type="Texture2D" uid="uid://crqoq284vvs22" path="res://assets/cardback.png" id="2_lna5b"]

[sub_resource type="Animation" id="Animation_nkgg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cardBack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(77, 107)]
}

[sub_resource type="Animation" id="Animation_alwpp"]
resource_name = "deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cardBack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(77, 0), Vector2(77, 107)]
}

[sub_resource type="Animation" id="Animation_klk73"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cardBack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(77, 107), Vector2(77, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfdx5"]
_data = {
"RESET": SubResource("Animation_nkgg6"),
"deselect": SubResource("Animation_alwpp"),
"select": SubResource("Animation_klk73")
}

[node name="card" type="Container"]
custom_minimum_size = Vector2(158, 220)
offset_right = 158.0
offset_bottom = 220.0
script = ExtResource("1_8872n")
metadata/_edit_use_anchors_ = true

[node name="cardBack" type="Sprite2D" parent="."]
position = Vector2(77, 107)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lna5b")

[node name="selectAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qfdx5")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
